# GIK

./: CMakeLists.txt  README.md
cmake/: default_targets.cmake  external_packages.cmake
executables/: CMakeLists.txt
executables/ros/: CMakeLists.txt
include/GIK/: common.hpp  denavit_hartenberg.hpp
include/GIK/models/: SCARA.hpp
src/: GIK.cpp
